--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "enobrev-node-tools",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "General Tools for Node.js Projects",
   "private": true,
   "author": "Mark Armendariz <src@enobrev.com>",
   "license": "MIT",
   "main": "dist/index.js",
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "winston": "^2.3.1",
-    "winston-syslog": "^1.2.6"
+    "winston": "^2.4.1",
+    "winston-syslog": "^2.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-preset-env": "^1.6.1"
   }
 }
