--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "winston-rsyslog-cee",
-  "version": "0.1.3",
+  "name": "rsyslog-cee",
+  "version": "0.1.0",
   "description": "Publishes CEE-Enhanced Logs to Rsyslog with some custom parameters for indexing and searching",
   "author": "Mark Armendariz <src@enobrev.com>",
   "license": "MIT",
   "main": "dist/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/enobrev/winston-rsyslog-cee.git"
+    "url": "https://github.com/enobrev/rsyslog-cee.git"
   },
   "dependencies": {
-    "winston": "2.4.3",
-    "winston-syslog": "1.2.6"
+    "syslogh": "^1.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
