--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "Mark Armendariz <src@enobrev.com>",
   "license": "MIT",
   "main": "dist/index.js",
+  "scripts": {
+    "server": "node dist/index.js",
+    "watch": "nodemon --watch 'src/**/*.ts' --exec ts-node-dev ./src/index.ts",
+    "build": "tsc -p ."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/enobrev/rsyslog-cee.git"
@@ -13,12 +18,9 @@
     "syslogh": "^1.2.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
-    "rollup-plugin-babel": "^3.0.3",
-    "rollup-watch": "^4.3.1"
+    "@types/node": "^10.12.18",
+    "nodemon": "^1.18.9",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "^3.2.4"
   }
 }
