--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "type": "git",
     "url": "https://github.com/enobrev/rsyslog-cee.git"
   },
-  "dependencies": {
-    "syslogh": "moll/node-syslogh#4/head"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "^10.12.18",
     "typescript": "^3.2.4"
